Split into per-project tests across two group classes and rename to StudioCentral
Replace single multi-project TestGenesisProjectsApi with AbstractStudioCentralProjectsApi base + two concrete subclasses (TestStudioCentralGroupRatingClaim, TestStudioCentralGroupPolicyBundle). Each subclass starts its own container in @BeforeClass, lists projects via API, then runs one @Test per project using @DataProvider so ReportPortal shows a row per project with individual pass/fail and full failure detail. Rename remaining "Genesis" identifiers (enums, listener) to "StudioCentral"; only the real GitLab URL path keeps the /genesis/ segment.